--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,22 @@
 @import "tailwindcss";
 
+@theme {
+  --color-brand: #22c55e; /* Emerald Green */
+  --color-brand-dark: #166534;
+}
+
 :root {
+  --background: #050505;
+  --foreground: #ededed;
+}
+/* :root {
   --background: #ffffff;
-  --foreground: #171717;
-}
+  --foreground: #0a0a0a;
+} */
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dark {
+  --background: #050505;
+  --foreground: #ededed;
 }
 
 body {
