--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,6 @@
 }
 
 :root {
-  --background: #c7cbcf;
-  --foreground: #0f172a;
-}
-
-.dark {
   --background: #050505;
   --foreground: #ededed;
 }
@@ -20,10 +15,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
-html,body{
+html,
+body {
   overflow-x: hidden;
 }
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -48,7 +44,6 @@ html.lenis body {
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
 }
-
 
 /* For Webkit browsers (Chrome, Edge, Safari) */
 ::-webkit-scrollbar {
