--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,17 @@ html.lenis body {
   pointer-events: none;
 }
 
+@media (min-width: 769px) {
+  body {
+    cursor: none;
+  }
+  a,
+  button,
+  .cursor-pointer {
+    cursor: none;
+  }
+}
+
 /* For Webkit browsers (Chrome, Edge, Safari) */
 ::-webkit-scrollbar {
   width: 6px; /* very thin */
